r1908: * dh_installudev: Include rules.d directory so symlink can be made even   before udev is installed. Closes: #363307

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.32) unstable; urgency=low
+
+  * dh_installudev: Include rules.d directory so symlink can be made even
+    before udev is installed. Closes: #363307
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 18 Apr 2006 10:13:54 -0400
+
 debhelper (5.0.31) unstable; urgency=low
 
   [ Valery Perrin ]
