r1910:   * Update french translation with recent change in dh_installxfonts

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (5.0.33) UNRELEASED; urgency=low
+
+  [ Valery Perrin ]
+  * Update french translation with recent change in dh_installxfonts
+
+ -- Valery Perrin <valery.perrin.debian@free.fr>  fri, 21 Apr 2006 16:04:00 +0200
+
+
 debhelper (5.0.32) unstable; urgency=low
 
   * dh_installudev: Include rules.d directory so symlink can be made even
