--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -1,10 +1,11 @@
+# Translation of man-db manpages to French
 # Translation of debhelper manpages to French
 # Valery Perrin <valery.perrin.debian@free.fr>, 2005, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: debhelper manpages\n"
+"Project-Id-Version: man-db manpages\n"
 "POT-Creation-Date: 2006-04-17 15:59-0400\n"
-"PO-Revision-Date: 2006-04-14 11:15+0200\n"
+"PO-Revision-Date: 2006-04-21 15:55+0200\n"
 "Last-Translator: Valery Perrin <valery.perrin.debian@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -5268,7 +5269,6 @@ msgstr ""
 
 # type: textblock
 #: dh_installxfonts:22
-#, fuzzy
 msgid ""
 "Before calling this program, you should have installed any X fonts provided "
 "by your package into the appropriate location in the package build "
@@ -5279,7 +5279,8 @@ msgstr ""
 "Avant d'exécuter ce programme, il est nécessaire d'avoir installé, dans "
 "l'emplacement adéquat du répertoire de construction du paquet, toutes les "
 "polices de caractères graphiques fournies par le paquet ainsi que les "
-"fichiers fonts.alias et fonts.scale dans etc/X11/fonts s'ils sont utilisés."
+"fichiers fonts.alias et fonts.scale dans etc/X11/fonts/X11R7 s'ils sont "
+"utilisés."
 
 # type: textblock
 #: dh_installxfonts:28
