r1911: * dh_installxfonts: Patch from Theppitak Karoonboonyanan to fix   an instance of /etc/X11/fonts/ that was missed before. Closes: #364530

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,11 @@ debhelper (5.0.33) UNRELEASED; urgency=low
   [ Valery Perrin ]
   * Update french translation with recent change in dh_installxfonts
 
- -- Valery Perrin <valery.perrin.debian@free.fr>  fri, 21 Apr 2006 16:04:00 +0200
+  [ Joey Hess ]
+  * dh_installxfonts: Patch from Theppitak Karoonboonyanan to fix
+    an instance of /etc/X11/fonts/ that was missed before. Closes: #364530
 
+ -- Joey Hess <joeyh@debian.org>  Sun, 23 Apr 2006 22:37:25 -0400
 
 debhelper (5.0.32) unstable; urgency=low
 
