--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (5.0.34) unstable; urgency=low
+
+  * dh_installcatalogs: Make sure that /etc/sgml exists. Closes: #364946
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 27 Apr 2006 12:07:56 -0400
+
 debhelper (5.0.33) unstable; urgency=low
 
   [ Valery Perrin ]
