--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (5.0.35) UNRELEASED; urgency=low
+
+  * dh_installman: When --language is used, be smarter about stripping 
+    language codes from man page filenames. Only strip things that look like
+    codes that match the specified languages. Closes: #366645
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 10 May 2006 20:07:40 -0400
+
 debhelper (5.0.34) unstable; urgency=low
 
   * dh_installcatalogs: Make sure that /etc/sgml exists. Closes: #364946
