r1920:   * Update french translation with recent change in dh_installxfonts

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.36) UNRELEASED; urgency=low
+
+  [ Valery Perrin ]
+  * Update french translation with recent change in dh_installxfonts
+
+   -- Joey Hess <joeyh@debian.org>  Sun, 11 May 2006 21:48:00 +0200
+
 debhelper (5.0.35) unstable; urgency=low
 
   * dh_installman: When --language is used, be smarter about stripping
