r1922: * Remove old alternate dependency on fileutils. Closes: #370011

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,10 @@ debhelper (5.0.36) UNRELEASED; urgency=low
   [ Valery Perrin ]
   * Update french translation with recent change in dh_installxfonts
 
- -- Joey Hess <joeyh@debian.org>  Sun, 11 May 2006 21:48:00 +0200
+  [ Joey Hess ]
+  * Remove old alternate dependency on fileutils. Closes: #370011
+
+ -- Joey Hess <joeyh@debian.org>  Sat,  3 Jun 2006 17:00:06 -0400
 
 debhelper (5.0.35) unstable; urgency=low
 
