--- a/doc/TODO
+++ b/doc/TODO
@@ -37,10 +37,10 @@ Wishlist items:
 v6:
 
 * escaping in config files (for whitespace)?
-* make dh_installman set up slave links, always assuming wm and man page
-  are in same area (/usr/bin and /usr/share/man, or /usr/X11/). Or, if the
-  .1x extension stuff is a problem, only look for man pages in
-  /usr/share/man. #85963
+* make dh_installman set up slave links. X11 stuff is no longer 
+  a problem due to X reorg. #85963
+* fix dh_builddeb DH_ALWAYS_EXCLUDE support to operate same as other
+  commands, see #242834
 
 Deprecated:
 
