--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (5.0.36) UNRELEASED; urgency=low
+debhelper (5.0.36) unstable; urgency=low
 
   [ Valery Perrin ]
   * Update french translation with recent change in dh_installxfonts
@@ -7,11 +7,11 @@ debhelper (5.0.36) UNRELEASED; urgency=low
   * Remove old alternate dependency on fileutils. Closes: #370011
   * Patch from Guillem Jover to make --same-arch handling code support
     the new form of architecture wildcarding which allows use of things
-    like "linux-any" and "any-i386" in the Architecture field. Note that
-    you'll need to build-depend on a new enough dpkg-dev if using this
-    support. Closes: #371082
+    like "linux-any" and "any-i386" in the Architecture field. Closes: #371082
+  * Needs dpkg-dev 1.13.13 for dpkg-architecture -s support needed by
+    above, but already depends on that.
 
- -- Joey Hess <joeyh@debian.org>  Wed,  7 Jun 2006 13:57:38 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri,  9 Jun 2006 14:57:19 -0400
 
 debhelper (5.0.35) unstable; urgency=low
 
