--- a/debian/changelog
+++ b/debian/changelog
@@ -9,9 +9,11 @@ debhelper (5.0.37) UNRELEASED; urgency=low
   * Note: behavior change due to the above: The mere existence of a
     debian/package.modules file will no longer make dh_installmodules add code
     to maintainer scripts.
-  * Untested.
+  * dh_installxfonts: In postrm, run the deregistraton code even on upgrade,
+    in case an upgrade involves moving fonts around (or removing or renaming
+    fonts). Closes: #372686
 
- -- Joey Hess <joeyh@debian.org>  Fri,  9 Jun 2006 16:47:44 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 11 Jun 2006 12:29:14 -0400
 
 debhelper (5.0.36) unstable; urgency=low
 
