--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,6 @@
+NOTE: debhelper has been NMUed. That NMU will need to be investigated and/or
+merged before any further debhelper releases can be made.
+
 debhelper (5.0.37) unstable; urgency=low
 
   * dh_installmodules: depmod -a is no longer run during boot, so if a module
