r1935:   * Update french translation with recent change in dh_installmodules

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,13 @@
 NOTE: debhelper has been NMUed. That NMU will need to be investigated and/or
 merged before any further debhelper releases can be made.
 
+debhelper (5.0.38) UNRELEASED; urgency=low
+
+  [ Valery Perrin ]
+  * Update french translation with recent change in dh_installmodules
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 27 Jun 2006 22:10:38 +0200
+
 debhelper (5.0.37) unstable; urgency=low
 
   * dh_installmodules: depmod -a is no longer run during boot, so if a module
