--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debhelper manpages\n"
 "POT-Creation-Date: 2006-06-09 17:10-0400\n"
-"PO-Revision-Date: 2006-05-11 21:43+0200\n"
+"PO-Revision-Date: 2006-06-27 22:30+0200\n"
 "Last-Translator: Valery Perrin <valery.perrin.debian@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1286,13 +1286,12 @@ msgstr ""
 
 # type: textblock
 #: dh_installmodules:20
-#, fuzzy
 msgid ""
 "dh_installmodules is a debhelper program that is responsible for registering "
 "kernel modules."
 msgstr ""
 "dh_installmodules est le programme de la suite debhelper chargé de "
-"l'inscription des modules du noyau avec modutils."
+"l'inscription des modules du noyau."
 
 # type: textblock
 #: dh_installmodules:23
@@ -1311,17 +1310,18 @@ msgstr ""
 
 # type: textblock
 #: dh_installmodules:29
-#, fuzzy
 msgid ""
 "Kernel modules are searched for in the package build directory and if found, "
 "postinst and postrm commands are automatically generated to run depmod and "
 "register the modules when the package is installed. See L<dh_installdeb(1)> "
 "for an explanation of how this works."
 msgstr ""
-"De plus, il produit automatiquement les lignes de code des scripts de "
-"maintenance postinst et postrm nécessaires à l'interfaçage avec le paquet "
-"menu. Consulter L<dh_installdeb(1)> pour obtenir une explication sur le "
-"mécanisme d'insertion de lignes de code."
+"Des modules de noyau sont recherchés dans le répertoire de construction du "
+"paquet et, s'il s'en trouve, les lignes de code des scripts de maintenance "
+"postinst et postrm sont automatiquement produits afin d'exécuter depmod et "
+"d'inscrire les modules lors de l'installation du paquet. Consulter "
+"L<dh_installdeb(1)> pour obtenir une explication sur le mécanisme "
+"d'insertion de lignes de code."
 
 # type: textblock
 #: dh_installmodules:40 dh_installmenu:39 dh_installmime:36 dh_makeshlibs:60
@@ -1331,16 +1331,14 @@ msgstr "Empêche la modification des scripts de maintenance postinst et postrm."
 
 # type: textblock
 #: dh_installmodules:44
-#, fuzzy
 msgid ""
 "When this parameter is used, dh_installmodules looks for and installs files "
 "named debian/package.name.modules and debian/package.name.modprobe instead "
 "of the usual debian/package.modules and debian/package.modprobe"
 msgstr ""
-"Utilise S<« nom »> pour nommer le fichier de modules installé dans etc/"
-"modutils/. Quand ce paramètre est utilisé, dh_installmodules cherche et "
-"installe les fichiers nommés debian/paquet.nom.modules au lieu des fichiers "
-"debian/paquet.modules habituels."
+"Quand ce paramètre est utilisé, dh_installmodules cherche et installe les "
+"fichiers nommés debian/paquet.nom.modules et debian/paquet.nom.modprobe au "
+"lieu des fichiers habituels debian/paquet.modules et debian/paquet.modprobe."
 
 # type: textblock
 #: dh_installmenu:5
@@ -5367,19 +5365,3 @@ msgstr ""
 #: dh_installlogcheck:59
 msgid "Jon Middleton <jjm@debian.org>"
 msgstr "Jon Middleton <jjm@debian.org>"
-
-# type: textblock
-#~ msgid ""
-#~ "Then postinst and postrm commands are automatically generated to register "
-#~ "the modules when the package is installed. See L<dh_installdeb(1)> for an "
-#~ "explanation of how this works. Note that this will be done for any "
-#~ "package this program acts on which has either a package.modules file, or "
-#~ "has .o or .ko files in /lib/modules."
-#~ msgstr ""
-#~ "dh_installmodules produit les lignes de code des scripts de maintenance "
-#~ "postinst et postrm nécessaires à l'inscription des modules lors de "
-#~ "l'installation du paquet. Consulter L<dh_installdeb(1)> pour obtenir une "
-#~ "explication sur le mécanisme d'insertion de lignes de code dans les "
-#~ "scripts de maintenance du paquet. S<Nota :> Cela sera réalisé pour tous "
-#~ "les paquets construits qui possèdent un fichier paquet.module ou un "
-#~ "fichier .o ou .ko dans /lib/modules."
