r1936: * move po4a to Build-Depends as it's run in clean.

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,11 @@ debhelper (5.0.38) UNRELEASED; urgency=low
 
   [ Valery Perrin ]
   * Update french translation with recent change in dh_installmodules
+  
+  [ Joey Hess]
+  * move po4a to Build-Depends as it's run in clean.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 27 Jun 2006 22:10:38 +0200
+ -- Joey Hess <joeyh@debian.org>  Sun,  2 Jul 2006 18:11:49 -0400
 
 debhelper (5.0.37) unstable; urgency=low
 
