--- a/doc/TODO
+++ b/doc/TODO
@@ -41,6 +41,7 @@ v6:
   a problem due to X reorg. #85963
 * fix dh_builddeb DH_ALWAYS_EXCLUDE support to operate same as other
   commands, see #242834
+* Fix #288250
 
 Deprecated:
 
