r1939: * Add size test, which fails on any debhelper program of more than 150   lines. This is not a joke, and 100 lines would be better.

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ debhelper (5.0.38) UNRELEASED; urgency=low
   
   [ Joey Hess]
   * move po4a to Build-Depends as it's run in clean.
+  * Add size test, which fails on any debhelper program of more than 150
+    lines. This is not a joke, and 100 lines would be better.
 
  -- Joey Hess <joeyh@debian.org>  Sun,  2 Jul 2006 18:11:49 -0400
 
