r1942:   lines (excluding POD). This is not a joke, and 100 lines would be better. * Add size test exception for dh_python, since it's deprecated.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (5.0.38) UNRELEASED; urgency=low
+debhelper (5.0.38) unstable; urgency=low
 
   [ Valery Perrin ]
   * Update french translation with recent change in dh_installmodules
@@ -14,7 +14,8 @@ debhelper (5.0.38) UNRELEASED; urgency=low
   * dh_python is now deprecated. Closes: #358392, #253582, #189474
   * move po4a to Build-Depends as it's run in clean.
   * Add size test, which fails on any debhelper program of more than 150
-    lines. This is not a joke, and 100 lines would be better.
+    lines (excluding POD). This is not a joke, and 100 lines would be better.
+  * Add size test exception for dh_python, since it's deprecated.
 
  -- Joey Hess <joeyh@debian.org>  Sun,  1 Oct 2006 13:07:40 -0400
 
