r1945: * Conflict with python-support <= 0.5.2 and python-central <= 0.5.4.

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,7 +7,7 @@ debhelper (5.0.38) unstable; urgency=low
   * ACK last three NMUs with thanks to Raphael Hertzog for making the best of
     a difficult situation.
   * Revert all dh_python changes. Closes: #381389, #378604
-  * Conflict with python-support << 0.5.3 and python-central << 0.5.5.
+  * Conflict with python-support <= 0.5.2 and python-central <= 0.5.4.
   * Make dh_python do nothing if debian/pycompat is found.
     The new versions of dh_pysupport or dh_pycentral will take care of
     everything dh_python used to do in this situation.
