r1946: * dh_python: Also be a no-op if there's a Python-Version control file field.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (5.0.39) unstable; urgency=low
+
+  * dh_python: Also be a no-op if there's a Python-Version control file field.
+
+ -- Joey Hess <joeyh@debian.org>  Tue,  3 Oct 2006 13:02:24 -0400
+
 debhelper (5.0.38) unstable; urgency=low
 
   [ Valery Perrin ]
