r1948:   * Update french translation with recent change in dh_python

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.40) UNRELEASED; urgency=low
+
+  [ Valery Perrin ]
+  * Update french translation with recent change in dh_python
+
+ -- Joey Hess <joeyh@debian.org>  Tue,  4 Oct 2006 13:02:24 -0400
+
 debhelper (5.0.39) unstable; urgency=low
 
   * dh_python: Also be a no-op if there's a Python-Version control file field.
