--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debhelper manpages\n"
 "POT-Creation-Date: 2006-10-03 13:03-0400\n"
-"PO-Revision-Date: 2006-06-27 22:30+0200\n"
+"PO-Revision-Date: 2006-10-04 23:14+0200\n"
 "Last-Translator: Valery Perrin <valery.perrin.debian@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2870,7 +2870,6 @@ msgstr "B<dh_installlogcheck> [S<B<options de debhelper>>]"
 
 # type: textblock
 #: dh_installlogcheck:18
-#, fuzzy
 msgid ""
 "dh_installlogcheck is a debhelper program that is responsible for installing "
 "logcheck rule files into subdirectories of etc/logcheck/ in package build "
@@ -2881,7 +2880,7 @@ msgid ""
 msgstr ""
 "dh_installlocgheck est le programme de la suite debhelper chargé de "
 "l'installation des fichiers de règles de vérification des journaux (logcheck "
-"rulefiles) dans le sous-répertoire etc/logcheck/ du répertoire de "
+"rule files) dans le sous-répertoire etc/logcheck/ du répertoire de "
 "construction du paquet. S'ils existent, les fichiers suivants sont "
 "S<installés :>\n"
 " debian/package.logcheck.cracking\n"
@@ -4612,6 +4611,10 @@ msgid ""
 "dh_pycentral instead. This program will do nothing if debian/pycompat or a "
 "Python-Version control file field exists."
 msgstr ""
+"Notez bien que ce programme est obsolète. Il faut utiliser S<« dh_pysupport "
+"»> ou S<« dh_pycentral »> à la place. Ce programme ne fera rien si le champ "
+"S<« debian/pycompat »> ou S<« Python-Version »> existe dans le fichier S<« "
+"control »>."
 
 # type: textblock
 #: dh_python:23
