--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,12 @@
-debhelper (5.0.40) UNRELEASED; urgency=low
+debhelper (5.0.40) unstable; urgency=medium
 
   [ Valery Perrin ]
   * Update french translation with recent change in dh_python
 
- -- Joey Hess <joeyh@debian.org>  Tue,  4 Oct 2006 13:02:24 -0400
+  [ Joey Hess ]
+  * Tighten conflict with python-central. Closes: #391463
+
+ -- Joey Hess <joeyh@debian.org>  Fri,  6 Oct 2006 14:21:28 -0400
 
 debhelper (5.0.39) unstable; urgency=low
 
