r1951: * dh_installchangelogs man page typo. Closes: #393155

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (5.0.41) UNRELEASED; urgency=low
+
+  * dh_installchangelogs man page typo. Closes: #393155
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 15 Oct 2006 13:05:18 -0400
+
 debhelper (5.0.40) unstable; urgency=medium
 
   [ Valery Perrin ]
