r1952: Update french translation with recent change in dh_installchangelogs

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 debhelper (5.0.41) UNRELEASED; urgency=low
 
+  [ Joey Hess ]
   * dh_installchangelogs man page typo. Closes: #393155
+
+  [ Valery Perrin ]
+  * Update french translation with recent change in dh_installchangelogs
 
  -- Joey Hess <joeyh@debian.org>  Sun, 15 Oct 2006 13:05:18 -0400
 
