--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ debhelper (5.0.41) UNRELEASED; urgency=low
   * dh_installchangelogs man page typo. Closes: #393155
 
   [ Valery Perrin ]
+  * Encoding french translation from charset ISO-8859-1 to UTF-8
   * Update french translation with recent change in dh_installchangelogs
 
  -- Joey Hess <joeyh@debian.org>  Sun, 15 Oct 2006 13:05:18 -0400
