r1955: * Tighten python-support and python-central dependencies of debhelper,   in an IMHO rather futile attempt to deal with derived distributions.   Closes: #395495

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,7 +7,12 @@ debhelper (5.0.41) UNRELEASED; urgency=low
   * Encoding french translation from charset ISO-8859-1 to UTF-8
   * Update french translation with recent change in dh_installchangelogs
 
- -- Joey Hess <joeyh@debian.org>  Sun, 15 Oct 2006 13:05:18 -0400
+  [ Joey Hess ]
+  * Tighten python-support and python-central dependencies of debhelper,
+    in an IMHO rather futile attempt to deal with derived distributions.
+    Closes: #395495
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 27 Oct 2006 13:35:38 -0400
 
 debhelper (5.0.40) unstable; urgency=medium
 
