r1956: * Correct some incorrect instances of "v4 only" in docs. Closes: #381536 * dh_installinfo: Put the section madness to bed by not passing any section   information to install-info. Current install-info parses INFO-DIR-SECTION   on its own if that's not specified. Closes: #337215

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,8 +11,12 @@ debhelper (5.0.41) UNRELEASED; urgency=low
   * Tighten python-support and python-central dependencies of debhelper,
     in an IMHO rather futile attempt to deal with derived distributions.
     Closes: #395495
+  * Correct some incorrect instances of "v4 only" in docs. Closes: #381536
+  * dh_installinfo: Put the section madness to bed by not passing any section
+    information to install-info. Current install-info parses INFO-DIR-SECTION
+    on its own if that's not specified. Closes: #337215
 
- -- Joey Hess <joeyh@debian.org>  Fri, 27 Oct 2006 13:35:38 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue,  7 Nov 2006 17:04:47 -0500
 
 debhelper (5.0.40) unstable; urgency=medium
 
