--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (5.0.41) UNRELEASED; urgency=low
+debhelper (5.0.41) unstable; urgency=low
 
   [ Joey Hess ]
   * dh_installchangelogs man page typo. Closes: #393155
