r1959: Update french translation with recents changes in dh_link and dh_installinfo

--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debhelper manpages\n"
 "POT-Creation-Date: 2006-11-07 17:16-0500\n"
-"PO-Revision-Date: 2006-10-15 21:50+0200\n"
+"PO-Revision-Date: 2006-11-08 00:32+0100\n"
 "Last-Translator: Valery Perrin <valery.perrin.debian@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2601,15 +2601,14 @@ msgstr ""
 
 # type: textblock
 #: dh_installinfo:21
-#, fuzzy
 msgid ""
 "Note that install-info determines some information about the info files by "
 "parsing them, in particular, it looks at the INFO-DIR-SECTION line to "
 "determine what section the info file belongs in."
 msgstr ""
-"Il détermine certaines informations concernant les fichiers info en les "
-"analysant. En particulier, il regarde la ligne INFO-DIR-SECTION pour "
-"déterminer la section à laquelle le fichier info appartient."
+"S<Nota :> install-info détermine certaines informations concernant les "
+"fichiers info en les analysant. En particulier, il regarde la ligne INFO-DIR-"
+"SECTION pour déterminer la section à laquelle le fichier info appartient."
 
 # type: textblock
 #: dh_installinfo:25
@@ -4022,7 +4021,6 @@ msgstr ""
 
 # type: textblock
 #: dh_link:45
-#, fuzzy
 msgid ""
 "dh_link also scans the package build tree for existing symlinks which do not "
 "conform to debian policy, and corrects them (v4 or later)."
