--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (5.0.42) UNRELEASED; urgency=low
+
+  [ Valery Perrin ]
+  * Update french translation with recents changes in dh_link and
+    dh_installinfo
+
+ -- Joey Hess <joeyh@debian.org>  Tue,  7 Nov 2006 17:04:47 -0500
+
 debhelper (5.0.41) unstable; urgency=low
 
   [ Joey Hess ]
