--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
-debhelper (5.0.42) UNRELEASED; urgency=low
+debhelper (5.0.42) unstable; urgency=low
 
   [ Valery Perrin ]
   * Update french translation with recents changes in dh_link and
     dh_installinfo
 
- -- Joey Hess <joeyh@debian.org>  Tue,  7 Nov 2006 17:04:47 -0500
+  [ Joey Hess ]
+  * Patch from Simon Paillard to convert French manpages from utf-8 to
+    ISO-8859-15. Closes: #397953
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 12 Nov 2006 17:32:23 -0500
 
 debhelper (5.0.41) unstable; urgency=low
 
