r1962: Correct typo into french manpages

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (5.0.43) UNRELEASED; urgency=low
+
+  [ Valery Perrin ]
+  * Correct typo in french translation
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 19 Nov 2006 17:32:23 -0500
+
+
 debhelper (5.0.42) unstable; urgency=low
 
   [ Valery Perrin ]
