--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debhelper manpages\n"
 "POT-Creation-Date: 2006-11-07 17:16-0500\n"
-"PO-Revision-Date: 2006-11-08 00:32+0100\n"
+"PO-Revision-Date: 2006-11-19 20:50+0100\n"
 "Last-Translator: Valery Perrin <valery.perrin.debian@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -940,7 +940,7 @@ msgstr ""
 "Debhelper prend en charge la construction des udebs. Pour créer un udeb avec "
 "debhelper, il faut ajouter S<« XC>-Package-S<Type: udeb »> aux lignes de "
 "paquet dans debian/control, ainsi qu'une dépendance vers S<debhelper (>>S<= "
-"4,2)> dans la ligne build-depend. Debhelper essayera de construire des "
+"4.2)> dans la ligne build-depend. Debhelper essayera de construire des "
 "udebs, conformément aux règles de l'installateur Debian, en suffixant les "
 "fichiers de paquets générés avec S<« .udeb »>, en n'installant aucune "
 "documentation, en omettant les scripts preinst, postrm et prerm ainsi que "
@@ -1054,9 +1054,9 @@ msgstr ""
 "ligne de commande de debhelper. Ce comportement est utile dans quelques "
 "situations, par exemple, pour passer -p à toutes les commandes de debhelper "
 "qui seront exécutées. Une bonne façon d'employer DH_OPTIONS est d'utiliser "
-"des S<« Cible-spécifique Variable Valeurs »> dans le fichier debian/rules. "
-"Consulter la documentation de make pour obtenir des précisions sur cette "
-"méthode."
+"des triplets S<« Cible-spécifique Variable Valeurs »> dans le fichier debian/"
+"rules. Consulter la documentation de make pour obtenir des précisions sur "
+"cette méthode."
 
 # type: =item
 #: debhelper.pod:419
