--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,10 @@ debhelper (5.0.43) UNRELEASED; urgency=low
   [ Valery Perrin ]
   * Correct typo in french translation
 
- -- Joey Hess <joeyh@debian.org>  Sun, 19 Nov 2006 17:32:23 -0500
+  [ Joey Hess ]
+  * Typo. Closes: #400571
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 27 Nov 2006 12:17:29 -0500
 
 
 debhelper (5.0.42) unstable; urgency=low
