r1965: * dh_fixperms: Change a chmod +x to chmod a+x, to avoid the umask   influencing it.

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,10 @@ debhelper (5.0.43) UNRELEASED; urgency=low
 
   [ Joey Hess ]
   * Typo. Closes: #400571
+  * dh_fixperms: Change a chmod +x to chmod a+x, to avoid the umask
+    influencing it.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 27 Nov 2006 12:17:29 -0500
+ -- Joey Hess <joeyh@debian.org>  Tue, 26 Dec 2006 16:26:57 -0500
 
 debhelper (5.0.42) unstable; urgency=low
 
