--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,10 @@ debhelper (5.0.43) UNRELEASED; urgency=low
   * Typo. Closes: #400571
   * dh_fixperms: Change a chmod +x to chmod a+x, to avoid the umask
     influencing it.
+  * Looks like Package-Type might get into dpkg. Support it w/o the XB-
+    too.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 26 Dec 2006 16:26:57 -0500
+ -- Joey Hess <joeyh@debian.org>  Wed, 10 Jan 2007 18:00:35 -0500
 
 debhelper (5.0.42) unstable; urgency=low
 
