r1967: * dh_installudev: Fix postrm to not fail if the udev symlink is missing.   Closes: #406921

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,10 @@ debhelper (5.0.43) UNRELEASED; urgency=low
     influencing it.
   * Looks like Package-Type might get into dpkg. Support it w/o the XB-
     too.
+  * dh_installudev: Fix postrm to not fail if the udev symlink is missing.
+    Closes: #406921
 
- -- Joey Hess <joeyh@debian.org>  Wed, 10 Jan 2007 18:00:35 -0500
+ -- Joey Hess <joeyh@debian.org>  Sun, 21 Jan 2007 11:42:25 -0500
 
 debhelper (5.0.42) unstable; urgency=low
 
