--- a/debian/changelog
+++ b/debian/changelog
@@ -11,8 +11,11 @@ debhelper (5.0.43) UNRELEASED; urgency=low
     too.
   * dh_installudev: Fix postrm to not fail if the udev symlink is missing.
     Closes: #406921
+  * dh_fixperms: Make all files in /usr/include 644, not only .h files.
+    Closes: #404785
+  * Man page improvements. Closes: #406707
 
- -- Joey Hess <joeyh@debian.org>  Sun, 21 Jan 2007 11:42:25 -0500
+ -- Joey Hess <joeyh@debian.org>  Sun, 21 Jan 2007 12:11:40 -0500
 
 debhelper (5.0.42) unstable; urgency=low
 
