--- a/debian/changelog
+++ b/debian/changelog
@@ -14,8 +14,10 @@ debhelper (5.0.43) UNRELEASED; urgency=low
   * dh_fixperms: Make all files in /usr/include 644, not only .h files.
     Closes: #404785
   * Man page improvements. Closes: #406707
+  * dh_installdocs: In v5 mode, now ignore empty files even if they're hidden
+    away inside a subdirectory. The code missed this before. See #200905
 
- -- Joey Hess <joeyh@debian.org>  Sun, 21 Jan 2007 12:11:40 -0500
+ -- Joey Hess <joeyh@debian.org>  Sun, 21 Jan 2007 12:16:56 -0500
 
 debhelper (5.0.42) unstable; urgency=low
 
