--- a/debian/changelog
+++ b/debian/changelog
@@ -16,8 +16,9 @@ debhelper (5.0.43) UNRELEASED; urgency=low
   * Man page improvements. Closes: #406707
   * dh_installdocs: In v5 mode, now ignore empty files even if they're hidden
     away inside a subdirectory. The code missed this before. See #200905
+  * dh_installudev: Support debian/udev files. Closes: #381854
 
- -- Joey Hess <joeyh@debian.org>  Sun, 21 Jan 2007 12:16:56 -0500
+ -- Joey Hess <joeyh@debian.org>  Sun, 21 Jan 2007 12:28:06 -0500
 
 debhelper (5.0.42) unstable; urgency=low
 
