--- a/debian/changelog
+++ b/debian/changelog
@@ -10,15 +10,18 @@ debhelper (5.0.43) UNRELEASED; urgency=low
   * Looks like Package-Type might get into dpkg. Support it w/o the XB-
     too.
   * dh_installudev: Fix postrm to not fail if the udev symlink is missing.
-    Closes: #406921
+    Closes: #406921, #381940
   * dh_fixperms: Make all files in /usr/include 644, not only .h files.
     Closes: #404785
   * Man page improvements. Closes: #406707
   * dh_installdocs: In v5 mode, now ignore empty files even if they're hidden
     away inside a subdirectory. The code missed this before. See #200905
   * dh_installudev: Support debian/udev files. Closes: #381854
+  * dh_installudev: Treat --priority value as a string so that leading zeros
+    can be used (also so that a leading "z" that is not "z60" can be
+    specified). Closes: #381851
 
- -- Joey Hess <joeyh@debian.org>  Sun, 21 Jan 2007 12:28:06 -0500
+ -- Joey Hess <joeyh@debian.org>  Sun, 21 Jan 2007 12:33:22 -0500
 
 debhelper (5.0.42) unstable; urgency=low
 
