--- a/debhelper.pod
+++ b/debhelper.pod
@@ -64,7 +64,8 @@ file can be found.
 
 In some rare cases, you may want to have different versions of these files
 for different architectures. If files named debian/package.foo.arch
-exist, where "arch" is the same as the output of "dpkg --print-architecture",
+exist, where "arch" is the same as the output of 
+"dpkg-architecture -qDEB_HOST_ARCH",
 then they will be used in preference to other, more general files.
 
 In many cases, these config files are used to specify various types of
