--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,7 @@ debhelper (5.0.43) UNRELEASED; urgency=low
   * dh_installudev: Treat --priority value as a string so that leading zeros
     can be used (also so that a leading "z" that is not "z60" can be
     specified). Closes: #381851
+  * Misc minor changes.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 21 Jan 2007 12:44:02 -0500
 
