--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (5.0.43) UNRELEASED; urgency=low
+debhelper (5.0.43) unstable; urgency=low
 
   [ Valery Perrin ]
   * Correct typo in french translation
