r1978: * dh_installudev: Don't fail if the link already somehow exists on initial   package install. Closes: #415717

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.44) UNRELEASED; urgency=low
+
+  * dh_installudev: Don't fail if the link already somehow exists on initial
+    package install. Closes: #415717
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 09 Apr 2007 14:37:48 -0400
+
 debhelper (5.0.43) unstable; urgency=low
 
   [ Valery Perrin ]
