r1980: * prerm and postrm scripts are now generated in a reverse order than   preinst and postinst scripts. For example, if a package uses   dh_pysupport before dh_installinit, the prerm will first stop the init   script and then remove the python files. * Introducing beginning of v6 mode. * dh_installwm: In v6 mode, install a slave manpage link for   x-window-manager.1.gz. Done in v6 mode because some window managers   probably work around this longstanding debhelper bug by registering the   slave on their own. This bug was only fixable once programs moved out of   /usr/X11R6. Closes: #85963 * dh_builddeb: In v6 mode, fix bug in DH_ALWAYS_EXCLUDE handling, to work   the same as all the other code in debhelper. This could only be fixed in   v6 mode because packages may potentially legitimately rely on the old   buggy behavior. Closes: #242834 * dh_installman: In v6 mode, overwrite exsiting man pages. Closes: #288250

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -353,6 +353,28 @@ dh_install errors out if wildcards expand to nothing.
 
 =back
 
+=item V6
+
+This mode is still under development. Currently it has these differences
+compared to V5:
+
+=over 8
+
+=item -
+
+dh_installwm will install a slave manpage link for x-window-manager.1.gz.
+
+=item -
+
+dh_builddeb did not previously delete everything matching
+DH_ALWAYS_EXCLUDE, if it was set to a list of things to exclude, such as
+"CVS:.svn". Now it does.
+
+=item -
+
+dh_installman allows overwriting existing man pages in the package build
+directory. In previous compatability levels it silently refuses to do this.
+
 =back
 
 =head2 Doc directory symlinks
