--- a/doc/TODO
+++ b/doc/TODO
@@ -33,16 +33,12 @@ Wishlist items:
 v6:
 
 * escaping in config files (for whitespace)?
-* make dh_installman set up slave links. X11 stuff is no longer 
-  a problem due to X reorg. #85963
-* fix dh_builddeb DH_ALWAYS_EXCLUDE support to operate same as other
-  commands, see #242834
-* Fix #288250
 
 Deprecated:
 
-* DH_COMPAT 1, 2. Can be removed once all packages are seen to be using 3 or
-  higher. I won't hold my breath. Now with evil warning messages though.
+* DH_COMPAT 1, 2, 3. Can be removed once all packages are seen to be using
+  a newer version. I won't hold my breath. Now with evil warning messages
+  though.
 * Also, grep the entire archive for all dh_* command lines,
   and check to see what other switches are not being used, and maybe remove
   some of them. I'd also like to deprecate/remove debian/compress files, -X is
