r1981: * Add dh_installifupdown. Please consider using this if you have   /etc/network/if-up.d, etc files. Closes: #217552

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,8 @@ debhelper (5.0.44) UNRELEASED; urgency=low
     v6 mode because packages may potentially legitimately rely on the old
     buggy behavior. Closes: #242834
   * dh_installman: In v6 mode, overwrite exsiting man pages. Closes: #288250
+  * Add dh_installifupdown. Please consider using this if you have
+    /etc/network/if-up.d, etc files. Closes: #217552
 
  -- Joey Hess <joeyh@debian.org>  Mon, 09 Apr 2007 15:18:22 -0400
 
